--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">FinanceAI</string>
+    <string name="finance_ai">Finance AI</string>
+    <string name="create_an_account">Create an account</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot Password?</string>
 </resources>
