--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,23 @@
     <string name="create_an_account">Create an account</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="error_lastName">Must be at least 2 characters long</string>
+    <string name="error_email">Enter a valid email address</string>
+    <string name="error_password">Password must be at least 6 digits long</string>
     <string name="sign_up">Sign Up</string>
+    <string name="fill_all_fields_correctly">Please fill all fields correctly</string>
+    <string name="failure">Failure</string>
+    <string name="error_firstName">Must be at least 3 characters long</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="login">Login</string>
+    <string name="user_not_found">User not found</string>
+    <string name="invalid_email_or_password">Invalid email or password</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="error_email_exists">This email is already registered</string>
+    <string name="error_name_exists">This name already exists</string>
+    <string name="account_created_successfully">Account created successfully</string>
+    <string name="registration_failed">Registration failed</string>
+
 </resources>
