--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,10 +30,13 @@
     <string name="invalid_email_or_password">Invalid email or password</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="reset_password">Reset Password</string>
-    <string name="error_email_exists">This email is already registered</string>
+    <string name="this_email_is_already_exists">This email is already registered</string>
     <string name="error_name_exists">This name already exists</string>
     <string name="account_created_successfully">Account created successfully</string>
     <string name="registration_failed">Registration failed</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="email_verification_could_not_be_sent">Email verification could not be sent</string>
+
     <string name="your_password_has_been_changed_successfully">Your password has been changed successfully</string>
     <string name="your_link_has_expired">Your link has expired</string>
     <string name="have_an_account_sign_up">Don’t have an account? Sign up</string>
