--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,20 @@
     <string name="reset_request_sent">Password reset request sent. Please check your email.</string>
     <string name="ok">OK</string>
     <string name="home">Home</string>
+   <string name="category_food">Food</string>
+<string name="category_groceries">Groceries</string>
+<string name="category_coffee_tea">Coffee &amp; Tea</string>
+<string name="category_dessert_sweets">Dessert &amp; Sweets</string>
+<string name="category_transport">Transport</string>
+<string name="category_rent">Rent</string>
+<string name="category_entertainment">Entertainment</string>
+<string name="category_health">Health</string>
+<string name="category_bills">Bills</string>
+<string name="category_clothing">Clothing</string>
+<string name="category_education">Education</string>
+<string name="category_home_decoration">Home Decoration</string>
+<string name="category_gifts_donation">Gifts &amp; Donation</string>
+<string name="category_other">Other</string>
     <string name="this_months_summary">This Month’s Summary</string>
     <string name="ai_suggestion">AI Suggestion</string>
     <string name="expense_categories">Expense Categories</string>
