AddTransactionViewModel.kt and AddTransaction.kt added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,12 +16,18 @@
     <string name="reset_request_sent">Password reset request sent. Please check your email.</string>
     <string name="ok">OK</string>
     <string name="home">Home</string>
+    <string name="income">Income</string>
+    <string name="enter_your_note">Enter your note</string>
+    <string name="enter_amount">Enter Amount</string>
+    <string name="expense">Expense</string>
    <string name="category_food">Food</string>
 <string name="category_groceries">Groceries</string>
 <string name="category_coffee_tea">Coffee &amp; Tea</string>
 <string name="category_dessert_sweets">Dessert &amp; Sweets</string>
 <string name="category_transport">Transport</string>
 <string name="category_rent">Rent</string>
+<string name="category">Category</string>
+<string name="select_category"> Select Category</string>
 <string name="category_entertainment">Entertainment</string>
 <string name="category_health">Health</string>
 <string name="category_bills">Bills</string>
