--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,29 @@
     <string name="category_gifts">Gifts</string>
     <string name="category_sales_income">Sales Income</string>
     <string name="category_other_income">Other Income</string>
+    <string name="selected_photo">Selected Photo</string>
+    <string name="remove_photo">Remove Photo</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="error_camera_failed">Camera error: %1$s</string>
+    <string name="error_camera_permission_denied">Camera permission denied</string>
+    <string name="select_location">Select Location</string>
+    <string name="current_location">Current Location</string>
+    <string name="search_address_hint">Search address </string>
+    <string name="confirm_location">Confirm Location</string>
+    <string name="location_services_disabled">Location Services Disabled</string>
+    <string name="location_services_disabled_message">You need to enable GPS to get your location.</string>
+    <string name="open_settings">Open Settings</string>
+    <string name="address_not_found">Address not found</string>
+    <string name="location_permission_required">Location permission required</string>
+    <string name="gps_disabled">GPS is off. Please enable location services.</string>
+    <string name="location_error">Location error: %s</string>
+    <string name="location_not_available">Location not available</string>
+    <string name="location_info_unavailable">Unable to retrieve location information</string>
+    <string name="location_label">Location</string>
+    <string name="location_coordinates">Lat: %1$.6f, Lon: %2$.6f</string>
+
+
 
 
 </resources>
