--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FinanceAI</string>
+    <string name="default_notification_channel_id">scheduled_transaction_channel</string>
     <string name="finance_ai">Finance AI</string>
     <string name="create_an_account">Create an account</string>
     <string name="password">Password</string>
