--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="history">History</string>
     <string name="error_select_type_first">Please select the transaction type first</string>
     <string name="date">Date</string>
+    <string name="no_record_found">No record found</string>
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
     <string name="last_week">Last Week</string>
