--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="date">Date</string>
     <string name="no_record_found">No record found</string>
     <string name="today">Today</string>
+    <string name="detail_screen">Detail Screen</string>
     <string name="yesterday">Yesterday</string>
     <string name="last_week">Last Week</string>
     <string name="last_month">Last Month</string>
