--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,11 +47,13 @@
     <string name="remaining_budget">Remaining Budget</string>
     <string name="ai_assistant">AI Assistant</string>
     <string name="history">History</string>
+    <string name="history_and_scheduled">History and Scheduled</string>
     <string name="error_select_type_first">Please select the transaction type first</string>
     <string name="date">Date</string>
     <string name="no_record_found">No record found</string>
     <string name="today">Today</string>
     <string name="detail_screen">Detail Screen</string>
+    <string name="scheduled_screen">Scheduled Screen</string>
     <string name="yesterday">Yesterday</string>
     <string name="last_week">Last Week</string>
     <string name="last_month">Last Month</string>
@@ -161,7 +163,8 @@
     <string name="select_category_error">Please select a category</string>
     <string name="update_failed">Update failed: %1$s</string>
     <string name="delete_failed">Deletion failed: %1$s</string>
-
+    <string name="no_scheduled_transactions">No scheduled transactions found</string>
+    <string name="confirm">Confirm</string>
 
 
 
